--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,9 +1,9 @@
 name: My First Pipeline
 
-# 1. Trigger (觸發條件): 當有人 push 到 main 分支時執行
+# 1. Trigger (觸發條件): 當有人 push 到 master 分支時執行
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 # 2. Jobs (任務): 定義要執行的工作
 jobs:
