Enhance GitHub Actions workflow with build step
Add build and upload artifact steps to workflow

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,3 +26,17 @@ jobs:
       # 第四步：執行測試 (關鍵步驟！)
       - name: Run Unit Tests
         run: python test_calc.py
+
+      # 第五步：模擬打包 (這裡我們只是把檔案複製到一個 dist 資料夾)
+      - name: Build Application
+        run: |
+          mkdir dist
+          cp calc.py dist/
+          echo "v1.0.0" > dist/version.txt
+
+      # 第六步：上傳 Artifact (關鍵步驟！)
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4  # GitHub 官方提供的上傳工具
+        with:
+          name: my-calculator-app       # 下載時的壓縮檔名稱
+          path: dist/                   # 要上傳哪個資料夾
