--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -42,3 +42,10 @@ jobs:
         with:
           name: my-calculator-app       # 下載時的壓縮檔名稱
           path: dist/                   # 要上傳哪個資料夾
+
+      # 第七步：發布到 GitHub Release (模擬部署到生產環境)
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')  # 雙重保險：只有 Tag 觸發時才跑
+        with:
+          files: dist/*
